refactor: ensure rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rails-challenge-clean-project",
+  "name": "rails-om30-project",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
